# WebToMarkdown

./: .gitignore  LICENSE  README.md  create_reference_docs.sh  pyproject.toml  release_notes.py  web2llms.py
docs/anthropic/models/: migration-guide.md  overview.md  whats-new-claude-4-7.md
docs/anthropic/prompt-engineering/: claude-prompting-best-practices.md  overview.md  prompting-tools.md
docs/openai/agents-sdk/: agent-evals.md  define-agents.md  guardrails-approvals.md  (+7 more)
reference/: deepagents.md
reference/integrations/: AzureChatOpenAI.md  AzureOpenAI.md  AzureOpenAIEmbeddings.md  BaseChatOpenAI.md  BaseOpenAI.md  ChatOpenAI.md  ChatXAI.md  OpenAI.md  OpenAIEmbeddings.md  langchain_aws.md  langchain_xai.md
reference/langchain/: agents.md  messages.md  middleware.md  tools.md
reference/langchain_core/: caches.md  callbacks.md  documents.md  prompts.md  retrievers.md
reference/langgraph/: agents.md  cache.md  channels.md  checkpoints.md  config.md  constants.md  errors.md  func.md  graphs.md  pregel.md  runtime.md  store.md  supervisor.md  types.md
release-notes/deepagents/: deepagents.md  langchain-daytona.md  langchain-modal.md  langchain-runloop.md
release-notes/langchain/: langchain-anthropic.md  langchain-core.md  langchain-openai.md  langchain-tests.md  langchain-xai.md  langchain.md
release-notes/langchain-aws/: langchain-aws.md  langgraph-checkpoint-aws.md
release-notes/langgraph/: langgraph-checkpoint-postgres.md  langgraph-checkpoint.md  langgraph-prebuilt.md  langgraph.md
tests/: test_create_reference_docs.py  test_web2llms.py
(+105 files in other folders)
