[project]
name = "web-to-markdown"
version = "0.1.0"
description = "Convert rendered web pages and Markdown artifacts into LLM-friendly documentation formats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "html2text>=2025.4.15",
    "markdown>=3.9",
    "markdownify>=1.2.2",
    "pillow>=11.3.0",
    "playwright>=1.61.0",
    "pygments>=2.19.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
